--- a/src/app/doer/doer.component.html
+++ b/src/app/doer/doer.component.html
@@ -1,3 +1,51 @@
-<div align="center">
-  <h1 style="color:purple">This is a doer page</h1>
-</div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <!--<title>Angular 1.6 Multistep form star rating</title>-->
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+</head>
+<body>
+
+
+<form class="rating-form" name="rating-movie">
+  <div class="container">
+    <!--<div class="row">-->
+
+    <span><input type="text" id="input-name" placeholder="Search"></span><span><i class="fa fa-plus-circle" style="font-size:45px;color:#ff5c62; alignment:left;
+     display: block;
+    float: right;
+    position: relative;
+    bottom: 55px;"></i></span>
+    <span><input type="text" id="title" placeholder="Title"></span><span><i class="fa fa-plus-square" style="font-size:45px;color:#ff5c62; alignment:right;
+     display: block;
+    position: relative;
+    top: 20px;"></i></span>
+  </div>
+
+</form>
+<ng-template #content let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Modal title</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <p>One fine body&hellip;</p>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
+  </div>
+</ng-template>
+
+<button class="btn btn-lg btn-outline-primary" (click)='open(content)'> demo modal</button>
+
+<hr>
+
+<pre>{{closeResult}}</pre>
+
+</body>
+</html>
+
+
+
