--- a/src/app/plus/plus.component.html
+++ b/src/app/plus/plus.component.html
@@ -12,16 +12,16 @@
 <!--<i class="fa fa-cloud" style="font-size:24px;"></i>-->
 
 
-  <i class="far fa-square" style="font-size:200px ;color:silver "></i>
+  <!--<i class="far fa-square" style="font-size:200px ;color:silver "></i>-->
 
 
 
 
-  <i class="far fa-circle" style="font-size: 200px; color: silver"></i>
+  <!--<i class="far fa-circle" style="font-size: 200px; color: silver"></i>-->
 
 
 
-  <i class="far fa-lightbulb" style="font-size: 300px;color:silver"></i>
+  <!--<i class="far fa-lightbulb" style="font-size: 300px;color:silver"></i>-->
 </div>
 <!--</body>-->
 <!--</html>-->
