--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -1,3 +1,64 @@
-<p>
-  calendar works!
-</p>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+
+  <!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">-->
+</head>
+<body>
+<div class="container">
+  <div class="schedule">
+    <!--Day-->
+  <span>
+    <li class="fa fa-calendar"  style="font-size: 90px;
+   stroke: #ff5c62; stroke-width: 25px;
+    color: #FFF4F5; display: block;
+     padding-left: auto;padding-right: auto; position: relative;
+     float: left; margin-left: 15%;">
+      <a href="#"> </a></li>
+
+  <p style="position: relative; right: 60px;
+   top: 30px;">
+    D</p>
+  </span>
+
+    <!--Week-->
+
+      <li class="fa fa-calendar" style="font-size: 90px;
+     stroke: #ff5c62; stroke-width: 25px; color: #FFF4F5;
+     display: block; margin: auto;
+      position: relative; bottom: 91px;
+      float: left; margin-left: 3%;"></li>
+
+
+  <p style="position: relative;
+   bottom: 60px; right: 65px;">
+    W</p>
+
+
+    <!--Month-->
+    <span><li class="fa fa-calendar" style="font-size: 90px;
+     stroke: #ff5c62; stroke-width: 25px; color: #FFF4F5;
+      display: block; margin: auto; position: relative;float: left;
+       margin-left: 3%; bottom: 150px;"></li>
+  <p style="position: relative; right: 63px; bottom: 120px;">
+    M
+  </p>
+    </span>
+
+
+    <!--Year-->
+    <span>
+      <li class="fa fa-calendar" style="font-size: 90px;
+     stroke: #ff5c62; stroke-width: 25px; color: #FFF4F5;
+      display: block; margin: auto; position: relative;
+      float: left; margin-left: 3%; bottom: 230px;" data-toggle="modal" data-target="#exampleModal"></li>
+
+  <p style="position: relative; right: 58px; bottom: 200px;">
+    Y
+  </p></span>
+  </div>
+
+</div>
+</body>
+</html>
