--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -1,32 +1,32 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <!--<title>Angular 1.6 Multistep form star rating</title>-->
-  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-</head>
-<body>
-<!--<h1> Add Do From </h1>-->
-<!--action="#" method="post"-->
-<form class="rating-form" name="rating-movie">
-  <div class="container">
-    <!--<div class="row">-->
-    <span><textarea type="text"  placeholder="Note..."></textarea></span><span><i class="fa fa-plus-square" style="font-size:45px;color:#ff5c62; alignment:right; display: block; float: right; position: relative; top:20px"></i></span>
+<!--<html lang="en">-->
+<!--<head>-->
+  <!--<meta charset="UTF-8">-->
+  <!--&lt;!&ndash;<title>Angular 1.6 Multistep form star rating</title>&ndash;&gt;-->
+  <!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">-->
+<!--</head>-->
+<!--<body>-->
+<!--&lt;!&ndash;<h1> Add Do From </h1>&ndash;&gt;-->
+<!--&lt;!&ndash;action="#" method="post"&ndash;&gt;-->
+<!--<form class="rating-form" name="rating-movie">-->
+  <!--<div class="container">-->
+    <!--&lt;!&ndash;<div class="row">&ndash;&gt;-->
+    <!--<span><textarea type="text"  placeholder="Note..."></textarea></span><span><i class="fa fa-plus-square" style="font-size:45px;color:#ff5c62; alignment:right; display: block; float: right; position: relative; top:20px"></i></span>-->
 
-    <br>
-    <i class="fa  fa-paperclip" style="font-size: 60px ;padding-right: 15px; color: burlywood; float:right; position: relative; bottom: 10px; right: 10px"></i>
+    <!--<br>-->
+    <!--<i class="fa  fa-paperclip" style="font-size: 60px ;padding-right: 15px; color: burlywood; float:right; position: relative; bottom: 10px; right: 10px"></i>-->
 
-  </div>
-  <div class="left">
-    <br>
-    <br>
-   </div>
-</form>
+  <!--</div>-->
+  <!--<div class="left">-->
+    <!--<br>-->
+    <!--<br>-->
+   <!--</div>-->
+<!--</form>-->
 
 
 
-<!-- RATING - Form -->
-<form class="rating-form" action="#" method="post" name="rating-movie">
+<!--&lt;!&ndash; RATING - Form &ndash;&gt;-->
+<!--<form class="rating-form" action="#" method="post" name="rating-movie">-->
 
-</form>
-</body>
-</html>
+<!--</form>-->
+<!--</body>-->
+<!--</html>-->
