--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
 
 </div>
 <ul class="menu">
-  <li title="Do"><a routerLink="/do" class="fa-square">Do</a></li>
+  <li title="Do"><a routerLink="/plus-do" class="fa-square">Do</a></li>
   <li title="Doer"><a routerLink="/doer" class="fa-circle">Doer</a></li>
   <li title="Calendar"><a routerLink ="/calendar" class="fa-calendar-check">Calendar</a></li>
   <li title="Plus"><a routerLink="/plus" class="active  fa-plus">plus</a></li>
