--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<app-menu (featureSelected)="onNavigate($event)"></app-menu>
+<app-vmenu (featureSelected)="onNavigate($event)"></app-vmenu>
 <!--<div class="row">-->
   <!--<div class="col-xs-12">-->
     <!--<div >-->
+
 <router-outlet></router-outlet>
       <!--<app-menu></app-menu>-->
       <!--<app-plus></app-plus>-->
