--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,13 +2,14 @@
 <div class="wrapper">
   <i class="fa-circle"></i>
 
+<!--</div>-->
+<!--<ul class="menu">-->
+  <!--<li title="Do"><a routerLink="/plus-do" class="fa-square">Do</a></li>-->
+  <!--<li title="Doer"><a routerLink="/doer" class="fa-circle">Doer</a></li>-->
+  <!--<li title="Calendar"><a routerLink ="/calendar" class="fa-calendar-check">Calendar</a></li>-->
+  <!--<li title="Plus"><a routerLink="/plus" class="active  fa-plus">plus</a></li>-->
+  <!--&lt;!&ndash;<i class="far fa-lightbulb" style="font-size: 300px;color:silver"></i>&ndash;&gt;-->
+  <!--<li title="Idea"><a routerLink="/idea" class="fa-lightbulb-o">Idea</a></li>-->
+  <!--<li title="Time"><a href="#" class="fa-play">Time</a></li>-->
+<!--</ul>-->
 </div>
-<ul class="menu">
-  <li title="Do"><a routerLink="/plus-do" class="fa-square">Do</a></li>
-  <li title="Doer"><a routerLink="/doer" class="fa-circle">Doer</a></li>
-  <li title="Calendar"><a routerLink ="/calendar" class="fa-calendar-check">Calendar</a></li>
-  <li title="Plus"><a routerLink="/plus" class="active  fa-plus">plus</a></li>
-  <!--<i class="far fa-lightbulb" style="font-size: 300px;color:silver"></i>-->
-  <li title="Idea"><a routerLink="/idea" class="fa-lightbulb-o">Idea</a></li>
-  <li title="Time"><a href="#" class="fa-play">Time</a></li>
-</ul>
