--- a/src/app/do/do.component.html
+++ b/src/app/do/do.component.html
@@ -113,11 +113,11 @@
 </head>
 <body>
 <div class="container">
-  <span><i class="fa fa-circle" style="font-size: 100px; stroke: #ff5c62; stroke-width: 30px; color: #FFF4F5; display: block; margin: auto; position: relative;"></i><a href="#"></a></span>
-  <span><i class="fa fa-square" style="font-size:500px; color:#ff5c62; display: block; margin: auto; position: relative;"></i></span>
-  <span><i class="fa fa-lightbulb" style="font-size: 100px; stroke: #ff5c62; stroke-width: 30px; color: #FFF4F5; display: block; margin: auto; float: right; position: relative; bottom: 300px; width: 45%;"></i></span>
+  <span><a routerLink="/doer"><i class="fa fa-circle" style="font-size: 100px; stroke: #ff5c62; stroke-width: 30px; color: #FFF4F5; display: block; margin: auto; position: relative;"></i></a></span>
+  <span><a routerLink="/do"><i class="fa fa-square" style="font-size:500px; color:#ff5c62; display: block; margin: auto; position: relative;"></i></a></span>
+  <span><a routerLink="/idea"><i class="fa fa-lightbulb" style="font-size: 100px; stroke: #ff5c62; stroke-width: 30px; color: #FFF4F5; display: block; margin: auto; float: right; position: relative; bottom: 300px; width: 45%;"></i></a></span>
   <span><i class="fa fa-play" style="font-size: 100px; stroke: #ff5c62; stroke-width: 30px; color: #FFF4F5; display: block; margin: auto; position: relative; float: right;"></i></span>
-  <span><i class="fa fa-calendar-check" style="font-size: 100px; stroke: #ff5c62; stroke-width: 30px; color: #FFF4F5; display: block; margin: auto; position: relative; bottom: 300px; width: 45%;"></i></span>
+  <span><a routerLink="/calendar"><i class="fa fa-calendar-check" style="font-size: 100px; stroke: #ff5c62; stroke-width: 30px; color: #FFF4F5; display: block; margin: auto; position: relative; bottom: 300px; width: 45%;"></i></a> </span>
 </div>
 </body>
 </html>
