--- a/src/app/plus/plus-doer/plus-doer.component.html
+++ b/src/app/plus/plus-doer/plus-doer.component.html
@@ -1,13 +1,9 @@
-<p>
-  plus-doer works!
-</p>
 
 
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <!--<title>Angular 1.6 Multistep form star rating</title>-->
-  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">-->
 </head>
 <body>
 
@@ -16,15 +12,20 @@
   <div class="container">
     <!--<div class="row">-->
 
-    <span><input type="text" id="input-name" placeholder="Search"></span><span><i class="fa fa-plus-circle" style="font-size:45px;color:#ff5c62; alignment:left;
+    <span><input type="text" id="input-name" placeholder="Search"></span><span><i class="fa fa-plus-circle"  (click)='open(content)' style="font-size:45px;color:#ff5c62; alignment:left;
      display: block;
     float: right;
     position: relative;
     bottom: 55px;"></i></span>
-    <span><input type="text" id="title" placeholder="Title"></span><span><i class="fa fa-plus-square" style="font-size:45px;color:#ff5c62; alignment:right;
+    <span><input type="text" id="title" placeholder="Title"></span>
+    <span><i class="fa fa-plus-square" style="font-size:45px;color:#ff5c62; alignment:right;
      display: block;
     position: relative;
     top: 20px;"></i></span>
+    <button   style="color: transparent" (click)='open(content)'><i class="fa fa-plus-square" style="font-size:45px;color:#ff5c62; alignment:right; padding-bottom: auto;
+     display: block;
+    position: relative;
+    top: 20px;"></i></button>
   </div>
 
 </form>
@@ -40,11 +41,15 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="c('Close click')">Close</button>
+    <!--<i class="fa fa-plus-circle"  (click)='open(content)' style="font-size:45px;color:#ff5c62; alignment:left;-->
+     <!--display: block;-->
+    <!--float: right;-->
+    <!--position: relative;-->
+    <!--bottom: 55px;"></i>-->
   </div>
 </ng-template>
 
-<button class="btn btn-lg btn-outline-primary" (click)='open(content)'> demo modal</button>
-
+<!--<button class="btn btn-lg btn-outline-primary" (click)='open(content)'></button>-->
 <hr>
 
 <pre>{{closeResult}}</pre>
