--- a/src/app/vmenu/vmenu.component.css
+++ b/src/app/vmenu/vmenu.component.css
@@ -1,4 +1,4 @@
-@import url("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+/*@import url("//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");*/
 body {
   font-family: veranda;/* Styled body text*/
 }
@@ -18,9 +18,9 @@ a { /*Styled all the a tags*/
   padding: 0;
   background: #fff4f5;
 }
-.vertical-menu li a {
-  width: 5em;
-  height: 3em;
+.menu.vertical-menu li a {
+  width: 6em;
+  height: 6em;
   padding: 20px;
   display:block;
   text-align:center;
@@ -98,9 +98,9 @@ a { /*Styled all the a tags*/
 /*.vertical-menu li:after{*/
   /*content: attr(title);*/
   /*position:absolute;*/
-  /*!*left:5em;*!*/
+  /*/*left:5em;*/*/
   /*top:0;*/
-  /*!*height:5em;*!*/
+  /*/*height:5em;*/*/
   /*-webkit-box-sizing: border-box;*/
   /*-moz-box-sizing: border-box;*/
   /*box-sizing: border-box;*/
