--- a/src/app/vmenu/vmenu.component.html
+++ b/src/app/vmenu/vmenu.component.html
@@ -1,11 +1,11 @@
-<ul class="vertical-menu">
-  <li title="Do"><a routerLink = "/plus-do" class="fa-square"></a></li>
-  <li title="Doer"><a routerLink = "/plus-doer" class="fa-circle"></a></li>
+<ul class="menu ; vertical-menu">
+  <li title="Do"><a routerLink = "/do" class="fa-square"></a></li>
+  <li title="Doer"><a routerLink = "/doer" class="fa-circle"></a></li>
   <li title="Calender"><a routerLink = "/calendar" class="fa-calendar-check"></a></li>
-  <li><a href="#" class="active fa-plus"></a><ul>
-    <li title="Do"><a href="#" class="fa-square"> Do</a></li>
-    <li title="Doer"><a href="#" class="fa-circle"> Doer</a></li>
-    <li title="Idea"><a href="#" class="fa-lightbulb-o"> Idea</a></li>
+  <li><a class="active fa-plus"></a><ul>
+    <li title="Do"><a href="plus-do" class=" active fa-square"> Do</a></li>
+    <li title="Doer"><a href="plus-doer" class="active fa-circle"> Doer</a></li>
+    <li title="Idea"><a href="plus-idea" class="active fa-lightbulb-o"> Idea</a></li>
   </ul>
   </li>
   <li title="Idea"><a href="#" class="fa-lightbulb-o"></a></li>
