--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -10,12 +10,13 @@
   <div class="schedule">
     <!--Day-->
   <span>
+    <a routerLink="/do">
     <li class="fa fa-calendar"  style="font-size: 90px;
    stroke: #ff5c62; stroke-width: 25px;
     color: #FFF4F5; display: block;
      padding-left: auto;padding-right: auto; position: relative;
      float: left; margin-left: 15%;">
-      <a href="#"> </a></li>
+    </li></a>
 
   <p style="position: relative; right: 60px;
    top: 30px;">
