--- a/src/app/plus/plus-do/plus-do.component.css
+++ b/src/app/plus/plus-do/plus-do.component.css
@@ -18,12 +18,12 @@ form {
 form input, form textarea {
   border: 0;
   outline: 0;
-  padding: 1em;
+  padding: 1.5em;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   border-radius: 8px;
   display: block;
-  width: 90%;
+  width: 80%;
   margin-top: 1em;
   font-family: 'Merriweather', sans-serif;
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
@@ -52,7 +52,7 @@ form textarea {
 
 .half {
   float: left;
-  width: 48%;
+  width: 90%;
   margin-bottom: 1em;
 }
 
@@ -339,4 +339,29 @@ body {
 .rating-form input[type='radio']:checked ~ .form-output {
   right: 5px;
   opacity: 1;
+}
+.buttondemo section {
+  background: #f7f7f7;
+  border-radius: 3px;
+  text-align: center;
+  margin: 1em;
+  position: relative !important;
+  padding-bottom: 10px;
+}
+
+.buttondemo md-content {
+  margin-right: 7px;
+}
+
+.buttondemo section .md-button {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.buttondemo .label {
+  position: absolute;
+  bottom: 5px;
+  left: 7px;
+  font-size: 14px;
+  opacity: 0.54;
 }
