--- a/src/app/plus/plus-do/plus-do.component.html
+++ b/src/app/plus/plus-do/plus-do.component.html
@@ -55,18 +55,18 @@
   </div>
 
 
-  <h3>Mini Fab Buttons</h3>
-  <div class="button-row">
-    <button mat-mini-fab>Basic</button>
-    <button mat-mini-fab color="primary">Primary</button>
-    <button mat-mini-fab color="accent">Accent</button>
-    <button mat-mini-fab color="warn">Warn</button>
-    <button mat-mini-fab disabled>Disabled</button>
-    <button mat-mini-fab>
-      <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
-    </button>
-    <a mat-mini-fab routerLink=".">Link</a>
-  </div>
+  <!--<h3>Mini Fab Buttons</h3>-->
+  <!--<div class="button-row">-->
+    <!--<button mat-mini-fab>Basic</button>-->
+    <!--<button mat-mini-fab color="primary">Primary</button>-->
+    <!--<button mat-mini-fab color="accent">Accent</button>-->
+    <!--<button mat-mini-fab color="warn">Warn</button>-->
+    <!--<button mat-mini-fab disabled>Disabled</button>-->
+    <!--<button mat-mini-fab>-->
+      <!--<mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>-->
+    <!--</button>-->
+    <!--<a mat-mini-fab routerLink=".">Link</a>-->
+  <!--</div>-->
 
 
   <fieldset class="form-group">
