--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /*https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css*/
+@import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
 
 
 /* You can add global styles to this file, and also import other style files */
